# evertext-bot-1-account

./: .env.example  .gitignore  ZEABUR_DEPLOYMENT.md  capture_headers.js  capture_script_content.js  check_cookie_validity.js  debug_browser_socket.js  decrypt_main.cjs  decrypt_main_v2.cjs  decrypt_main_v3.cjs  dump_storage.js  friend_bot_fixed_db.json  index.js  initial_db.json  main_bot_decrypted.json  merge_everything.js  migrate_accounts.cjs  package.json  raw_ws_test.js  refresh_sessions.js  reset_test.js  setup_login.js  test-chrome.js  test_run.js  update_db_missing.js  update_pan_chi.js  zeabur.json
.agent/tasks/: task.md
Friend_Bot_Export (2)/Friend_Bot_Export/: README.md
Friend_Bot_Export (2)/Friend_Bot_Export/data/: cookies.json  db.json
Friend_Bot_Export (2)/Friend_Bot_Export/src/: bot.js  manager.js  runner.js
data/: cookies.json  db.json  headers.json
friend_dist/: .env.example  Cargo.toml  README_FOR_FRIEND.txt  db.json
friend_dist/src/: db.rs  main.rs  mod.rs
friend_dist/src/protocol/: socket.rs
src/: bot.js  db.js  direct_runner.js  manager.js  runner.js  runner_fast.js  update_schedule.js
