[package]
name = "evertext_bot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dotenv = "0.15"
regex = "1.10"
url = "2.5"
log = "0.4"
env_logger = "0.10"
serenity = { version = "0.12", features = ["full"] }
chrono = "0.4"
chrono-tz = "0.8"
magic-crypt = "3.1"
